--- a/less/custom.less
+++ b/less/custom.less
@@ -275,6 +275,12 @@
 
     .contacts {
         position: relative;
+        min-height: 30vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        align-content: center;
+
         &:before{
             content: '';
             position: absolute;
@@ -291,7 +297,6 @@
         font-size: 5.33em;
         font-family: @serif;
         line-height: 1;
-
     }   
  }
 
