--- a/style.css
+++ b/style.css
@@ -546,6 +546,11 @@ code {
 }
 .main-container .contacts {
   position: relative;
+  min-height: 30vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
 }
 .main-container .contacts:before {
   content: '';
