--- a/less/custom.less
+++ b/less/custom.less
@@ -222,7 +222,7 @@
         justify-content: center;
         align-items: center;
         
-        margin-top: 40vh;
+        margin: 10vh 0;
         overflow: hidden;
 
         &:before {
