--- a/less/custom.less
+++ b/less/custom.less
@@ -76,7 +76,7 @@
     justify-content: center;
     flex-wrap: wrap;
     
-    color: #fff;
+    color: #222;
     
     .full_bg {
         position: relative;
@@ -94,7 +94,7 @@
         }
         
          .description {
-            font-size: 1.6em;
+            font-size: 1.5em;
          }
    
     } 
@@ -104,7 +104,7 @@
         content: ' ';
         position: absolute;
         bottom: 0;right: 0;left: 0;top: 0;
-        background-color: #222f3e;
+        background-color: #ffeaa7;
         opacity: .6;
         z-index: 1;
     }
