--- a/css/icons/style.css
+++ b/css/icons/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?1byq1i');
-  src:  url('fonts/icomoon.eot?1byq1i#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?1byq1i') format('truetype'),
-    url('fonts/icomoon.woff?1byq1i') format('woff'),
-    url('fonts/icomoon.svg?1byq1i#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?z2g0tj');
+  src:  url('fonts/icomoon.eot?z2g0tj#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?z2g0tj') format('truetype'),
+    url('fonts/icomoon.woff?z2g0tj') format('woff'),
+    url('fonts/icomoon.svg?z2g0tj#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -37,11 +37,17 @@
 .icon-globe:before {
   content: "\e903";
 }
+.icon-inbox:before {
+  content: "\e90d";
+}
 .icon-instagram:before {
   content: "\e904";
 }
 .icon-linkedin:before {
   content: "\e905";
+}
+.icon-mail:before {
+  content: "\e90e";
 }
 .icon-map:before {
   content: "\e906";
@@ -60,6 +66,12 @@
 }
 .icon-send:before {
   content: "\e90b";
+}
+.icon-truck:before {
+  content: "\e90f";
+}
+.icon-twitch:before {
+  content: "\e910";
 }
 .icon-twitter:before {
   content: "\e90c";
