--- a/style.css
+++ b/style.css
@@ -413,6 +413,9 @@ code {
   text-align: center;
   z-index: 3;
 }
+.main-container {
+  width: 100%;
+}
 .main-container .first_textblock {
   padding: 35vh 0;
   background-image: url(pic/textblock1.png);
@@ -425,11 +428,21 @@ code {
   font-family: 'PT Serif', Georgia, 'Times New Roman', Times, serif;
   line-height: 1;
 }
+@media (max-width: 439px) {
+  .main-container .first_textblock .first_textblock-title {
+    font-size: 24px;
+  }
+}
 .main-container .first_textblock .first_textblock-discr {
   font-family: 'PT Serif', Georgia, 'Times New Roman', Times, serif;
   font-size: 1.5em;
   line-height: 1.2;
   margin-top: 1.2em;
+}
+@media (max-width: 439px) {
+  .main-container .first_textblock .first_textblock-discr {
+    font-size: 14px;
+  }
 }
 .main-container .cycle_textblock {
   min-height: 100vh;
@@ -444,6 +457,11 @@ code {
   justify-content: center;
   align-content: center;
 }
+@media (max-width: 439px) {
+  .main-container .cycle_textblock {
+    min-height: 40vh;
+  }
+}
 .main-container .cycle_textblock:before {
   content: '';
   position: absolute;
@@ -456,12 +474,24 @@ code {
   background-repeat: no-repeat;
   background-size: contain;
 }
+@media (max-width: 439px) {
+  .main-container .cycle_textblock:before {
+    z-index: -1;
+    opacity: 0.6;
+  }
+}
 .main-container .cycle_textblock .cycle_textblock-dcs {
   width: 40%;
   font-family: 'PT Serif', Georgia, 'Times New Roman', Times, serif;
   font-size: 1.5em;
   line-height: 1.2;
   margin-top: 1.2em;
+}
+@media (max-width: 749px) {
+  .main-container .cycle_textblock .cycle_textblock-dcs {
+    font-size: 24px;
+    width: 100%;
+  }
 }
 .main-container .sec_textblock {
   padding: 35vh 0;
@@ -470,6 +500,11 @@ code {
   font-size: 5.33em;
   font-family: 'PT Serif', Georgia, 'Times New Roman', Times, serif;
   line-height: 1;
+}
+@media (max-width: 439px) {
+  .main-container .sec_textblock .sec_textblock-title {
+    font-size: 24px;
+  }
 }
 .main-container .sec_textblock .sec_textblock-bgc {
   position: relative;
@@ -493,10 +528,15 @@ code {
   padding: 1em;
   border-radius: 1em;
 }
+@media (max-width: 439px) {
+  .main-container .sec_textblock .sec_textblock-discr {
+    font-size: 16px;
+  }
+}
 .main-container .youtube {
   position: relative;
   width: 100%;
-  height: 30vh;
+  height: 50vh;
   border-radius: 1em;
   background: rgba(0, 0, 0, 0.2);
   background-image: url(pic/bg.jpeg);
@@ -580,8 +620,18 @@ code {
   font-family: 'PT Serif', Georgia, 'Times New Roman', Times, serif;
   line-height: 1;
 }
+@media (max-width: 439px) {
+  .main-container .contacts .team-title {
+    font-size: 32px;
+  }
+}
 .main-container .card {
   padding: 2em;
+}
+@media (max-width: 439px) {
+  .main-container .card {
+    padding: 10px;
+  }
 }
 .main-container .card_pic {
   width: 100%;
@@ -704,6 +754,11 @@ code {
   margin: 2em 0 ;
   text-align: center;
   max-width: 20%;
+}
+@media (max-width: 439px) {
+  .main-container .wall .prt {
+    max-width: 50%;
+  }
 }
 .main-container .wall .prt a {
   text-decoration: none;
