--- a/less/custom.less
+++ b/less/custom.less
@@ -121,6 +121,8 @@
 
 
 .main-container {
+    width: 100%;
+
     .first_textblock {
         padding: 35vh 0;  
         background-image: url(pic/textblock1.png);  
@@ -132,13 +134,18 @@
             font-size: 5.33em;
             font-family: @serif;
             line-height: 1;
-
+            .max(440px, {
+                font-size: 24px;
+            })
         }
         .first_textblock-discr {
             font-family: @serif;
             font-size: 1.5em;
             line-height: 1.2;
             margin-top: 1.2em;
+            .max(440px, {
+                font-size: 14px;
+            })
         }
     }
 
@@ -151,6 +158,10 @@
         background-size: contain;
         position: relative;
 
+        .max(440px, {
+            min-height: 40vh;
+        });
+
         &:before{
             content: '';
             position: absolute;
@@ -159,6 +170,10 @@
             background-position: center;
             background-repeat: no-repeat;
             background-size: contain;
+            .max(440px, {
+                z-index: -1;
+                opacity: 0.6;
+            });
         }
         display: flex;
         align-items: center;
@@ -171,6 +186,11 @@
             font-size: 1.5em;
             line-height: 1.2;
             margin-top: 1.2em;
+
+            .max(750px, {
+                font-size: 24px;
+                width: 100%;
+            })
         }
     }
 
@@ -181,7 +201,9 @@
             font-size: 5.33em;
             font-family: @serif;
             line-height: 1;
-
+         .max(440px, {
+                font-size: 24px;
+            })   
         }
         .sec_textblock-bgc {
             position: relative;
@@ -203,13 +225,19 @@
             background-color: #fff;
             padding: 1em;
             border-radius: 1em;
+            .max(440px, {
+                font-size: 16px;
+            })
         }
     }
+
+    
+
 
     .youtube {
         position: relative;
         width: 100%;
-        height: 30vh;
+        height: 50vh;
 
         border-radius: 1em;
         background: rgba(0, 0, 0, .2);
@@ -285,10 +313,6 @@
             content: '';
             position: absolute;
             top: -3em;bottom: -3em;right: -3em;left: -3em;
-            // background-image: url(pic/jcycle.png);
-            // background-position: center;
-            // background-repeat: no-repeat;
-            // background-size: contain;
             background-color: #93D283;
             border-radius: 70% 30% 30% 69% / 60% 48% 60% 40%;
             z-index: -1;
@@ -297,12 +321,18 @@
         font-size: 5.33em;
         font-family: @serif;
         line-height: 1;
+        .max(440px, {
+            font-size: 32px;
+        })
     }   
  }
 
 
     .card {
         padding: 2em;
+        .max(440px, {
+            padding: 10px;
+        });
         &_pic {
             width: 100%;
             padding-top:100%;
@@ -324,8 +354,7 @@
                     content: ' ';
                     position: absolute;
                     top: 0;bottom: 0;right: 0;left: 0;
-                    .bgc;
-                    
+                    .bgc;     
                 }
                 &.k {
                     &::before {
@@ -437,7 +466,10 @@
            padding: 1em;
            margin:2em 0 ;   
            text-align: center;
-           max-width: 20%;       
+           max-width: 20%; 
+        .max(440px, {
+            max-width: 50%; 
+        });      
               a {
                   text-decoration: none;
                   color: @darkgray;
