--- a/less/custom.less
+++ b/less/custom.less
@@ -21,6 +21,40 @@
         font-size: 1.6em;
         letter-spacing: 0.02em;
         text-transform: uppercase;
+
+         span {
+            position: relative;
+  
+            @keyframes dropHeader {
+                0% {
+                    top: 100px;
+                    left: 700%;
+                }
+                100% {
+                    top: -15px;
+                    left: 100%;
+                }
+            }  
+            
+           &:before {
+                position: absolute;
+                transition: all 2s ease-in-out;
+                top: -15px;
+                left: 100%;
+                width: 30px;
+                height: 30px;
+                content: ' ';
+                background-image: url(pic/bee.svg);
+                background-size: 30px 30px;
+                background-position: right top;
+                background-repeat: no-repeat;
+                animation-name: dropHeader;
+                animation-iteration-count: 1;
+                animation-timing-function: linear;
+                animation-duration: 4s;
+            }
+        }
+
     }
     
     &.bg-head {
@@ -323,7 +357,7 @@
         line-height: 1;
         .max(440px, {
             font-size: 32px;
-        })
+        });
     }   
  }
 
