--- a/less/custom.less
+++ b/less/custom.less
@@ -421,16 +421,20 @@
                 font-size: 1.2em;
                 padding-bottom: 0.3em;
                 color: #000;
+
+
             } 
             .card_job {
-                font-family: @narrow;
-                font-weight: bold;
-                padding-bottom: 0.3em;
+              //  font-family: @narrow;
+                font-weight: normal;
+                color: #222;
+                font-size: 0.8em;
+               // padding-bottom: 0.3em;
             } 
             .card_decr {color:@darkgray;} 
             
             .card_link {
-                font-size: 0.8em;
+               // font-size: 0.8em;
                 //padding: 1.2em 0;
                 display: inline-block;
                 a {
