--- a/less/custom.less
+++ b/less/custom.less
@@ -158,7 +158,7 @@
     width: 100%;
 
     .first_textblock {
-        padding: 35vh 0;  
+        padding: 35vh 0 10vh;  
         background-image: url(pic/textblock1.png);  
         background-position: top right;
         background-repeat: no-repeat;
@@ -229,7 +229,7 @@
     }
 
     .sec_textblock {
-        padding: 35vh 0;  
+        padding: 20vh 0;  
 
         .sec_textblock-title {
             font-size: 5.33em;
