--- a/less/custom.less
+++ b/less/custom.less
@@ -268,73 +268,7 @@
     
 
 
-    .youtube {
-        position: relative;
-        width: 100%;
-        height: 50vh;
-
-        border-radius: 1em;
-        background: rgba(0, 0, 0, .2);
-        background-image: url(pic/bg.jpeg);
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: cover;
-
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        
-        margin: 10vh 0;
-        overflow: hidden;
-
-        &:before {
-            position: absolute;
-            top: 0;bottom: 0;right: 0;left: 0;
-            content: ' ';
-            background-color: rgba(0, 0, 0, .4);
-            z-index: 1;
-        }
-
-        .video_link {
-            position: relative;
-            z-index: 3;
-            @ms:30px;
-                a {
-                    display: block;
-                    width: 0;
-                    height: 0;
-                    border-top: @ms solid transparent;
-                    border-bottom: @ms solid transparent;
-                    border-left: @ms+15 solid @white;
-                    position: relative;
-                    z-index: 1;
-                    transition: all 0.3s;
-                    cursor: pointer;
-                    &:before {
-                        content: '';
-                        position: absolute;
-                        top: -1.5*@ms;
-                        bottom: -1.5*@ms;
-                        left: -2.5*@ms;
-                        right: -0.5*@ms;
-                        border-radius: 50%;
-                        border: 2px solid @white;
-                        z-index: 2;
-                        transition: all 0.3s;
-                    }
-                    &:after {
-                        content: '';
-                        opacity: 0;
-                        transition: opacity 0.6s;
-                    }
-                    &:hover:before,
-                    .play:focus:before {
-                        transform: scale(1.1);
-                    }
-                }
-        }
-    }
-
+  
     .contacts {
         position: relative;
         min-height: 30vh;
@@ -522,6 +456,78 @@
           
       }
 
+}
+
+
+.gallery {
+    width: 100%;
+
+    margin: 10vh 0;
+
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    align-items: center;
+    align-content: space-around;
+    
+
+    .item {
+        display: block;
+        border-radius: 10px;
+        background: rgba(0, 0, 0, .2);
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+
+        height: 35vh;
+        margin-bottom: 1%;
+        text-decoration: none;
+
+        position: relative;
+
+        &:nth-child(6n+1) {
+            width: 30%;
+        }        
+        &:nth-child(6n+2) {
+            width: 37%;
+        }        
+        &:nth-child(6n+3) {
+            width: 30%;
+        } 
+
+        &:nth-child(6n+4) {
+            width: 40%;
+        }        
+        &:nth-child(6n+5) {
+            width: 30%;
+        }        
+        &:nth-child(6n+6) {
+            width: 26%;
+        }
+
+        &:nth-child(1) {
+            width: 35%;
+        }        
+        &:nth-child(2) {
+            width: 15%;
+        }         
+        &:nth-child(3) {
+            width: 47%;
+        } 
+
+        &::before {
+            content: ' ';
+            position: absolute;
+            top: 0;bottom: 0;right: 0;left: 0;
+            background-color: rgba(0, 0, 0, .6);
+            z-index: 2;
+        }
+
+        &:hover::before {
+            background-color: rgba(0, 0, 0, .2);
+        }
+
+    }
 }
 
 
