--- a/style.css
+++ b/style.css
@@ -563,69 +563,6 @@ code {
     font-size: 16px;
   }
 }
-.main-container .youtube {
-  position: relative;
-  width: 100%;
-  height: 50vh;
-  border-radius: 1em;
-  background: rgba(0, 0, 0, 0.2);
-  background-image: url(pic/bg.jpeg);
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 10vh 0;
-  overflow: hidden;
-}
-.main-container .youtube:before {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  content: ' ';
-  background-color: rgba(0, 0, 0, 0.4);
-  z-index: 1;
-}
-.main-container .youtube .video_link {
-  position: relative;
-  z-index: 3;
-}
-.main-container .youtube .video_link a {
-  display: block;
-  width: 0;
-  height: 0;
-  border-top: 30px solid transparent;
-  border-bottom: 30px solid transparent;
-  border-left: 45px solid #ecf0f1;
-  position: relative;
-  z-index: 1;
-  transition: all 0.3s;
-  cursor: pointer;
-}
-.main-container .youtube .video_link a:before {
-  content: '';
-  position: absolute;
-  top: -45px;
-  bottom: -45px;
-  left: -75px;
-  right: -15px;
-  border-radius: 50%;
-  border: 2px solid #ecf0f1;
-  z-index: 2;
-  transition: all 0.3s;
-}
-.main-container .youtube .video_link a:after {
-  content: '';
-  opacity: 0;
-  transition: opacity 0.6s;
-}
-.main-container .youtube .video_link a:hover:before,
-.main-container .youtube .video_link a .play:focus:before {
-  transform: scale(1.1);
-}
 .main-container .contacts {
   position: relative;
   min-height: 30vh;
@@ -797,6 +734,67 @@ code {
   display: block;
   font-size: 1.3em;
   font-weight: bold;
+}
+.gallery {
+  width: 100%;
+  margin: 10vh 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  align-content: space-around;
+}
+.gallery .item {
+  display: block;
+  border-radius: 10px;
+  background: rgba(0, 0, 0, 0.2);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 35vh;
+  margin-bottom: 1%;
+  text-decoration: none;
+  position: relative;
+}
+.gallery .item:nth-child(6n+1) {
+  width: 30%;
+}
+.gallery .item:nth-child(6n+2) {
+  width: 37%;
+}
+.gallery .item:nth-child(6n+3) {
+  width: 30%;
+}
+.gallery .item:nth-child(6n+4) {
+  width: 40%;
+}
+.gallery .item:nth-child(6n+5) {
+  width: 30%;
+}
+.gallery .item:nth-child(6n+6) {
+  width: 26%;
+}
+.gallery .item:nth-child(1) {
+  width: 35%;
+}
+.gallery .item:nth-child(2) {
+  width: 15%;
+}
+.gallery .item:nth-child(3) {
+  width: 47%;
+}
+.gallery .item::before {
+  content: ' ';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 2;
+}
+.gallery .item:hover::before {
+  background-color: rgba(0, 0, 0, 0.2);
 }
 .ovfh {
   overflow-y: hidden;
