--- a/style.css
+++ b/style.css
@@ -599,6 +599,8 @@ code {
   background-color: #93D283;
   border-radius: 70% 30% 30% 69% / 60% 48% 60% 40%;
   z-index: -1;
+  animation: morph 8s ease-in-out infinite;
+  transition: all 1s ease-in-out;
 }
 .main-container .contacts .team-title {
   font-size: 5.33em;
@@ -608,6 +610,17 @@ code {
 @media (max-width: 47em) {
   .main-container .contacts .team-title {
     font-size: 3em;
+  }
+}
+@keyframes morph {
+  0% {
+    border-radius: 70% 30% 30% 69% / 60% 48% 60% 40%;
+  }
+  50% {
+    border-radius: 30% 60% 70% 40%/50% 60% 30% 60%;
+  }
+  100% {
+    border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
   }
 }
 .main-container .card {
