--- a/less/custom.less
+++ b/less/custom.less
@@ -301,7 +301,7 @@
             border-radius: 70% 30% 30% 69% / 60% 48% 60% 40%;
             z-index: -1;
 
-  // background: linear-gradient(45deg, @primary 0%, @secondary 100%);
+  background: linear-gradient(45deg, @primary 0%, @secondary 100%);
   animation: morph 8s ease-in-out infinite;
   transition: all 1s ease-in-out;
         }
@@ -325,7 +325,7 @@
           //background: linear-gradient(45deg, @third 0%, @secondary 100%);
         }
         100% {
-          border-radius: 60% 40% 30% 70%/60% 30% 70% 40%;
+            border-radius: 70% 30% 30% 69% / 60% 48% 60% 40%;
           //background: linear-gradient(45deg, @primary 0%, @secondary 100%);
         }
       }
