--- a/less/custom.less
+++ b/less/custom.less
@@ -290,7 +290,7 @@
 
         @background: #005;
         @primary: #ffbe76;
-        @secondary: #6ab04c;
+        @secondary: #f6e58d;
         @third: #badc58;
 
         &:before{
@@ -325,7 +325,7 @@
           //background: linear-gradient(45deg, @third 0%, @secondary 100%);
         }
         100% {
-            border-radius: 70% 30% 30% 69% / 60% 48% 60% 40%;
+          border-radius: 70% 30% 30% 69% / 60% 48% 60% 40%;
           //background: linear-gradient(45deg, @primary 0%, @secondary 100%);
         }
       }
