--- a/style.css
+++ b/style.css
@@ -599,7 +599,7 @@ code {
   background-color: #93D283;
   border-radius: 70% 30% 30% 69% / 60% 48% 60% 40%;
   z-index: -1;
-  background: linear-gradient(45deg, #ffbe76 0%, #6ab04c 100%);
+  background: linear-gradient(45deg, #ffbe76 0%, #f6e58d 100%);
   animation: morph 8s ease-in-out infinite;
   transition: all 1s ease-in-out;
 }
