--- a/style.css
+++ b/style.css
@@ -330,33 +330,6 @@ code {
 #top_nav .logo span {
   position: relative;
 }
-@keyframes dropHeader {
-  0% {
-    top: 100px;
-    left: 700%;
-  }
-  100% {
-    top: -15px;
-    left: 100%;
-  }
-}
-#top_nav .logo span:before {
-  position: absolute;
-  transition: all 2s ease-in-out;
-  top: -15px;
-  left: 100%;
-  width: 30px;
-  height: 30px;
-  content: ' ';
-  background-image: url(pic/bee.svg);
-  background-size: 30px 30px;
-  background-position: right top;
-  background-repeat: no-repeat;
-  animation-name: dropHeader;
-  animation-iteration-count: 1;
-  animation-timing-function: linear;
-  animation-duration: 4s;
-}
 #top_nav.bg-head .logo {
   opacity: 0;
 }
@@ -719,6 +692,19 @@ code {
   font-size: 2em;
   font-family: 'PT Serif', Georgia, 'Times New Roman', Times, serif;
   line-height: 1;
+  position: relative;
+}
+.main-container .social_block .joinus:before {
+  position: absolute;
+  top: -100%;
+  left: 80%;
+  width: 30px;
+  height: 30px;
+  content: ' ';
+  background-image: url(pic/bee.svg);
+  background-size: 30px 30px;
+  background-position: right top;
+  background-repeat: no-repeat;
 }
 .main-container .social_block .social {
   padding: 2em 0;
