--- a/less/custom.less
+++ b/less/custom.less
@@ -24,35 +24,6 @@
 
          span {
             position: relative;
-  
-            @keyframes dropHeader {
-                0% {
-                    top: 100px;
-                    left: 700%;
-                }
-                100% {
-                    top: -15px;
-                    left: 100%;
-                }
-            }  
-            
-           &:before {
-                position: absolute;
-                transition: all 2s ease-in-out;
-                top: -15px;
-                left: 100%;
-                width: 30px;
-                height: 30px;
-                content: ' ';
-                background-image: url(pic/bee.svg);
-                background-size: 30px 30px;
-                background-position: right top;
-                background-repeat: no-repeat;
-                animation-name: dropHeader;
-                animation-iteration-count: 1;
-                animation-timing-function: linear;
-                animation-duration: 4s;
-            }
         }
 
     }
@@ -438,7 +409,22 @@
         .joinus {
             font-size: 2em;
             font-family: @serif;
-            line-height: 1;  
+            line-height: 1; 
+            position: relative;
+            
+            
+           &:before {
+                position: absolute;
+                top: -100%;
+                left: 80%;
+                width: 30px;
+                height: 30px;
+                content: ' ';
+                background-image: url(pic/bee.svg);
+                background-size: 30px 30px;
+                background-position: right top;
+                background-repeat: no-repeat;
+            }
         } 
         .social {
             padding: 2em 0;
