--- a/less/custom.less
+++ b/less/custom.less
@@ -480,11 +480,14 @@
 
 }
 
+.gallery_bg {
+    background-color: #2d3436;
+    padding: 20vh 0;
+    margin: 10vh 0;
+}
 
 .gallery {
     width: 100%;
-
-    margin: 10vh 0;
 
     display: flex;
     flex-wrap: wrap;
@@ -496,53 +499,66 @@
     .item {
         display: block;
         border-radius: 10px;
-        background: rgba(0, 0, 0, .2);
+        background: rgba(246, 229, 141,0.3);
         background-position: center;
         background-repeat: no-repeat;
         background-size: cover;
 
-        height: 35vh;
-        margin-bottom: 1%;
+        height: 30vh;
+        margin: 4px 0;
         text-decoration: none;
         overflow: hidden;
 
         position: relative;
 
-        &:nth-child(6n+1) {
-            width: 30%;
+        &:nth-child(8n+1) {
+            width: 28%;
         }        
-        &:nth-child(6n+2) {
-            width: 37%;
+        &:nth-child(8n+2) {
+            width: 20%;
         }        
-        &:nth-child(6n+3) {
+        &:nth-child(8n+3) {
             width: 30%;
         } 
+        &:nth-child(8n+4) {
+            width: 20%;
+        }  
 
-        &:nth-child(6n+4) {
-            width: 40%;
+        &:nth-child(8n+5) {
+            width: 31%;
         }        
-        &:nth-child(6n+5) {
-            width: 30%;
+        &:nth-child(8n+6) {
+            width: 20%;
         }        
-        &:nth-child(6n+6) {
-            width: 26%;
+        &:nth-child(8n+7) {
+            width: 25%;
+        }        
+        &:nth-child(8n+8) {
+            width: 22%;
         }
 
         &:nth-child(1) {
-            width: 35%;
+            width: 40%;
+            height: 40vh;
         }        
         &:nth-child(2) {
             width: 15%;
+            height: 40vh;
         }         
         &:nth-child(3) {
-            width: 47%;
-        } 
+            width: 45%;
+            height: 40vh;
+        }         
+        // &:nth-child(4) {
+        //     width: 23%;
+        // } 
 
         &::before {
             content: ' ';
             position: absolute;
             top: 0;bottom: 0;right: 0;left: 0;
-            background-color: rgba(0, 0, 0, .6);
+            background: rgba(246, 229, 141,0.3);
+            background: rgba(0, 184, 148,.3);
             z-index: 2;
             transition: all 0.5s;
         }
