--- a/less/custom.less
+++ b/less/custom.less
@@ -139,21 +139,33 @@
 
     .first_textblock {
         padding: 35vh 0 10vh;  
-        background-image: url(pic/textblock1.png);  
-        background-position: top right;
-        background-repeat: no-repeat;
-        background-size: 75vh;
+        position: relative;
 
-        .max(48em, {background-image: url('');  });
+        .max(48em, {background-image: url(''); });
+
+        &:before {
+            content: '';
+            position: absolute;
+            top: 0;left: 0;right: 0;bottom: 0;
+            background-image: url(pic/textblock2.png);  
+            background-position: top right;
+            background-repeat: no-repeat;
+            background-size: contain;
+            z-index: 1;
+            opacity: 0.3;
+        }
 
         
         .first_textblock-title {
             font-size: 5.33em;
             font-family: @serif;
             line-height: 1;
+            position: relative;
+            z-index: 2;
             .max(48em, {
                 font-size: 3em;
-            })
+            });
+
         }
         .first_textblock-discr {
             font-family: @serif;
@@ -578,7 +590,7 @@
            &::after {
                 content: "\e909";
                 font-family: 'icomoon' !important;
-                speak: never;
+               // speak: never;
                 font-style: normal;
                 font-weight: normal;
                 font-variant: normal;
