--- a/less/custom.less
+++ b/less/custom.less
@@ -84,34 +84,18 @@
         width: 70%;
         margin: 0 auto;
         margin-bottom: 20vh;
-       // text-align: center;
-        
+           
         .logo {
             .upper(2em);
             font-family: @logo;
             font-size: 4em;
             letter-spacing: 0.3em;
-           // margin-left: 0.6em;
             text-transform: uppercase;  
         }
         
          .description {
             font-size: 1.5em;
          }
-
-         .max(48em, {
-            .logo { 
-                font-size: 3em;
-                .upper(1.6em); 
-                color: #222;
-            }
-            .description {
-                font-size: 1em;
-                color: #222;
-             };
-             
-             margin-bottom: 0;
-         });
     } 
 
     
@@ -122,20 +106,12 @@
         height: 80vh;
         right: 0;
         top: 0;
-       // left: 0;bottom: 0;
         z-index: 3;
         .bgc;
         background-position: 100% 0;
         background-size: contain;
         background-image: url(pic/bhand.png);
-
-        .max(48em, {
-            // z-index: -2;
-            height: 20vh;
-        });
-
     }
-    
     
     .lkly {
       position: absolute;
@@ -146,7 +122,31 @@
     }
 
     .max(48em, {
-        height: 80vh;
+         &:before { 
+            position: relative;
+            background-position: 0 0;
+            background-size: 100% 100%;
+            background-image: url(pic/title_blub_m.png);  
+        }
+
+
+    align-content: space-between; 
+    height: 100vh;
+    background-image: url(''); 
+
+        .full_bg {
+           // margin-bottom: 10vh;
+            width: 90%;
+            .logo { 
+               // font-size: 3em;
+                .upper(2em); 
+                color: #222;
+            }
+            .description {
+                font-size: 1em;
+                color: #222;
+            };
+        }
      });
 }
 
